--- a/src/sass/05-components/_journal.scss
+++ b/src/sass/05-components/_journal.scss
@@ -1,4 +1,5 @@
 .c-journal {
+    padding: 0 10px;
 
     &.-category {
         padding: 0 10px 80px;
@@ -30,12 +31,15 @@
         }
 
         @include respond-to("tablet") {
-            padding-bottom: 0;
+            padding-bottom: 20px;
         }
     }
 
     &.-list {
         list-style: none;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
     }
 
     &.-more {
@@ -67,7 +71,7 @@
 
             @include respond-to("laptop") {
                 width: 100%;
-                overflow: scroll;
+                overflow-x: scroll;
             }
         }
     }
@@ -91,19 +95,21 @@
     }
 
     &__post {
-        @include grid-column(4);
-        padding-bottom: 80px;
+        width: 33%;
+        padding: 0 10px 80px;
+
+        
 
         &.-no-results {
             color: $white;
         }
 
         @include respond-to("tablet") {
-            @include grid-column(6);
+            width: 50%;
         }
 
         @include respond-to("phone") {
-            @include grid-column(12);
+            width: 100%;
         }
 
         &__link {
